# AutoDocumentation

./: .gitignore  LICENSE  autodoc.py  better_prompt.txt  cleanup.py  create_structure.bat  doc_server.py  mcp_doc-generator.py  setup_project.sh  simple_server.py
.bsp/: scala-cli.json
.metals/: metals.mv.db
.scala-build/: ide-inputs.json
.scala-build/.bloop/: AutoDocumentation_7943a5e3e4-test.json  AutoDocumentation_7943a5e3e4.json
.scala-build/AutoDocumentation_7943a5e3e4/classes/main/services/: ReliableTransmission.tasty
autodocumentation/: README.md  pyproject.toml
autodocumentation/autodocumentation/: __init__.py  cli.py  config.py
autodocumentation/autodocumentation/analyzers/: class_relationship_analyzer.py  simple_diagram.py
autodocumentation/autodocumentation/generators/: __init__.py  markdown_generator.py  scala_sphinx_generator.py  sphinx_generator.py
autodocumentation/autodocumentation/llm/: __init__.py  base_client.py  claude_client.py  documentation_processor.py  model_context_protocol.py  prompt_generators.py
autodocumentation/autodocumentation/parsers/: __init__.py  python_parser.py  scala_parser.py
autodocumentation/autodocumentation/utils/: __init__.py  file_utils.py
autodocumentation/examples/scala/: ReliableTransmission.scala
autodocumentation/tests/: test_scala_parser.py
docs/api/scala/: WebSocketController_diagram.dot
docs/source/: conf.py
