# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodocumentation"
version = "0.1.0"
authors = [
    {name = "Ivan Kokalovic", email = "ivankokalovic@protonmail.ch"},
]
description = "Automatic documentation generator using Claude"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "argparse",
    "tqdm"
]

[project.scripts]
autodoc = "autodocumentation.cli:main"

[project.urls]
"Homepage" = "https://github.com/koke1997/autodocumentation"
"Bug Tracker" = "https://github.com/koke1997/autodocumentation/issues"